--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,14 @@
             <artifactId>shiro-spring</artifactId>
             <version>1.4.0</version>
         </dependency>
+
+        <!--JWT起步依赖-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
         <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
