--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <version>3.4.0</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
