留言 订单 聊天

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -21,3 +21,11 @@ goodorder.ordertime.NotBlank=\u4E0B\u5355\u65F6\u95F4\u4E0D\u80FD\u4E3A\u7A7A
 goodorder.school.NotBlank=\u5B66\u6821\u4E0D\u80FD\u4E3A\u7A7A
 
 goodorder.orderstatus.NotBlank=\u8BA2\u5355\u72B6\u6001\u4E0D\u80FD\u4E3A\u7A7A
+
+
+
+leaveWord.username.NotBlank = \u7559\u8A00\u7528\u6237\u540D\u4E0D\u80FD\u4E3A\u7A7A
+leaveWord.username.notnull = \u7559\u8A00\u7528\u6237\u540D\u4E0D\u80FD\u4E3A\u7A7A
+leaveWord.goodsId.notnull = \u7559\u8A00\u5546\u54C1id\u4E0D\u80FD\u4E3A\u7A7A
+leaveWord.content.NotBlank = \u7559\u8A00\u4FE1\u606F\u4E0D\u80FD\u4E3A\u7A7A
+leaveWord.content.notnull = \u7559\u8A00\u4FE1\u606F\u4E0D\u80FD\u4E3A\u7A7A
